# algorithm-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
堆_heap/: heap.hpp  heap_c.h
字符串哈希/: str_hash.h
线段树/: segment_tree_2.hpp  segment_tree_max.cpp  segment_tree_max.hpp  segment_tree_sum.cpp  segment_tree_sum.hpp  segment_tree_trans.hpp
